--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "react-items-carousel": "^2.8.0",
+    "react-leaf-carousel": "^1.2.2",
     "react-router-dom": "^5.1.2"
   }
 }
