--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
     "passport": "^0.4.0",
+    "pure-react-carousel": "^1.23.3",
     "react-items-carousel": "^2.8.0",
     "react-leaf-carousel": "^1.2.2",
     "react-router-dom": "^5.1.2"
