--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.6.3",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1",
+    "react-items-carousel": "^2.8.0",
+    "react-leaf-carousel": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "axios": "^0.18.0"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
