--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
@@ -36,5 +36,8 @@
     "react-items-carousel": "^2.8.0",
     "react-leaf-carousel": "^1.2.2",
     "react-router-dom": "^5.1.2"
+  },
+  "engines":{
+    "node": "11.3.0"
   }
 }
