--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm run start",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
@@ -37,7 +37,7 @@
     "react-leaf-carousel": "^1.2.2",
     "react-router-dom": "^5.1.2"
   },
-  "engines":{
+  "engines": {
     "node": "11.3.0"
   }
 }
